k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flutter-dms-web
  labels:
    app: flutter-dms-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: flutter-dms-web
  template:
    metadata:
      labels:
        app: flutter-dms-web
    spec:
    imagePullSecrets:
    - name: ghcr-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 101 # مستخدم nginx في صورة alpine
        fsGroup: 101
      containers:
      - name: web
        image: ghcr.io/moez-it-dev/flutter_document_management_system:13
        magePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 30
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"] # للسماح لـ Nginx بالعمل على المنفذ 80
        volumeMounts:
        - name: nginx-cache
          mountPath: /var/cache/nginx
        - name: nginx-run
          mountPath: /var/run
      volumes:
      - name: nginx-cache
        emptyDir: {}
      - name: nginx-run
        emptyDir: {}
