k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flutter-dms-web-service
  labels:
    app: flutter-dms-web
spec:
  selector:
    app: flutter-dms-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP # تغيير من LoadBalancer إلى ClusterIP لأن Ingress سيتولى التوجيه
